# dimg

./: CMakeLists.txt  README.md
core/app/: CMakeLists.txt  DigikamCoreTarget.cmake
core/app/utils/: digikam_export.h  digikam_globals.h
core/cmake/modules/: MacroDPlugins.cmake
core/dplugins/dimg/: CMakeLists.txt
core/dplugins/dimg/heif/: CMakeLists.txt  dimgheifplugin.h
core/dplugins/dimg/imagemagick/: CMakeLists.txt  dimgimagemagickplugin.h
core/dplugins/dimg/jpeg/: CMakeLists.txt  dimgjpegplugin.h
core/dplugins/dimg/jpeg2000/: CMakeLists.txt  dimgjpeg2000plugin.h
core/dplugins/dimg/png/: CMakeLists.txt  dimgpngplugin.h
core/dplugins/dimg/qimage/: CMakeLists.txt  dimgqimageplugin.h
core/dplugins/dimg/raw/: CMakeLists.txt  dimgrawplugin.h
core/dplugins/dimg/tiff/: CMakeLists.txt  dimgtiffplugin.h
core/libs/dimg/: CMakeLists.txt  dimg_metadata.cpp  dimg_p.h
core/libs/dimg/filters/: dimgfiltermanager.cpp
core/libs/dimg/filters/film/: filmfilter.cpp  filmfilter.h
core/libs/dimg/filters/icc/: iccmanager.cpp  iccmanager.h  iccsettings.cpp  iccsettings.h
core/libs/dimg/loaders/: dimgloader.cpp
core/libs/dngwriter/: CMakeLists.txt
core/libs/dplugins/: CMakeLists.txt
core/libs/dplugins/core/: dpluginrawimport.cpp  dpluginrawimport.h
core/libs/jpegutils/: CMakeLists.txt
core/libs/metadataengine/: CMakeLists.txt
core/libs/rawengine/: CMakeLists.txt
core/libs/threadimageio/: CMakeLists.txt
core/libs/threads/: CMakeLists.txt  dynamicthread.cpp
shims/: CMakeLists.txt  dfileoperations.h  dpluginloader.h
shims/include/: dfileoperations.h  dpluginloader.h  kconfiggroup.h  klocalizedstring.h  ksharedconfig.h
shims/src/: digikam_globals.cpp  digikam_version.cpp  dpluginloader.cpp
